2008-04-09  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Services/Banshee.Playlist/PlaylistSource.cs: Add
	information popup if user tries to add track(s) to a playlist from outside
	its primary source (since not yet implemented).

	* src/Core/Banshee.Services/Makefile.am: Reorder.

	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting.Gui/PodcastManager/Source/PodcastSource.cs:
	Set CanAddTracks to false since it doesn't work.

2008-04-09  Gabriel Burt  <gabriel.burt@gmail.com>

	This commit makes adding and deleting from a PrimarySource async, and pops
	up UserJobs if those operations take very long.  Very importantly, it also
	adds the ability to copy the track model selection so slow running jobs
	can process it w/o risking it changing on them.

	* src/Core/Banshee.Services/Banshee.Collection.Database/DatabaseTrackListModel.cs:
	Handle having no artist or album model gracefully.

	* src/Core/Banshee.Services/Banshee.Playlist/PlaylistSource.cs: Fixed up
	Add/Delete methods.

	* src/Core/Banshee.Services/Banshee.ServiceStack/UserJob.cs: Handle
	multiple Finish calls gracefully.

	* src/Core/Banshee.Services/Banshee.Sources/DatabaseSource.cs: New
	AddAllTracks method for use by MergeSource method.

	* src/Core/Banshee.Services/Banshee.Sources/PrimarySource.cs: Change slow
	operations to use a new CachedList object instead of iterating over the
	model's Selection, since it or the model might change underneath us.  Add
	UserJobs for adding/deleting.

	* src/Core/Banshee.Services/Banshee.Sources/Source.cs: Don't raise
	UserNotifyUpdated if we're the active source.

	* src/Core/Banshee.Services/Makefile.am: New files

	* src/Core/Banshee.Services/Banshee.Collection.Database/CachedList.cs: New
	class that contains a SqliteModelCache, so it's backed by CoreCache and
	can be used to store info (eg the selected tracks from a source) so they
	can be operated on independent of the original selection/model.
